--- a/1/css/patternfly.css
+++ b/1/css/patternfly.css
@@ -196,7 +196,7 @@
   --pf-global--palette--white: #fff;
   --pf-global--BackgroundColor--100: #fff;
   --pf-global--BackgroundColor--150: #fafafa;
-  --pf-global--BackgroundColor--200: #f0f0f0;
+  --pf-global--BackgroundColor--200: #000000;
   --pf-global--BackgroundColor--light-100: #fff;
   --pf-global--BackgroundColor--light-200: #fafafa;
   --pf-global--BackgroundColor--light-300: #f0f0f0;
